compiler.old/tests/compiler/must_fail/t_13.rs.exp.err
tests/compiler/must_fail/t_13.rs:2:10: 2:11 error: variable x undeclared
  return x
         ^^
