compiler.old/tests/compiler/must_fail/t_13.rs
fn foo() -> stack! (b64) {
  return x
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
